# chaosengineer

./: .gitignore  LICENSE  README.md  README_AUTORESEARCH.md  buf.gen.yaml  buf.yaml  pyproject.toml
bus/: go.mod  main.go
bus/internal/: broker.go  broker_test.go  commands.go  commands_test.go  events.go  filewriter.go  filewriter_test.go  integration_test.go  publisher.go  publisher_test.go  server.go
chaosengineer/: __init__.py  bus.py  cli.py  cli_menu.py
chaosengineer/core/: __init__.py  budget.py  coordinator.py  decision_log.py  interfaces.py  models.py  pause.py  snapshot.py  state.py  status.py
chaosengineer/execution/: __init__.py  cli_usage.py  result_parser.py  (+3 more)
tests/: conftest.py  test_batch_coordinator.py  test_bridge.py  test_budget.py  test_bus_commands.py  test_cli_menu.py  test_cli_run.py  test_cli_scripted.py  test_cli_usage.py  test_coordinator.py  test_coordinator_eval.py  test_coordinator_eval_bus.py  test_decision_log.py  test_eval_gate.py  test_eval_integration.py  test_executor_factory.py  test_extend_budget.py  test_harness.py  test_interfaces.py  test_llm_decision_maker.py  test_logger.py  test_models.py  test_monitor.py  test_parser.py  test_pause.py  test_pause_coordinator.py  test_pause_gate.py  test_plan_loader.py  test_publisher.py  test_result_parser.py  test_resume_coordinator.py  test_runner.py  test_shipped_scenarios.py  test_simulator.py  test_snapshot.py  test_state.py  test_status.py  test_subagent_executor.py  test_task_packet.py  test_tui_app.py  (+6 more)
workloads/: README.md  autoresearch-climbmix.md  autoresearch-irish-music.md
(+65 files in other folders)
